# mai-advisor-mcp

./: .gitignore  AGENTS.md  DEPLOY.sh  DEPLOYMENT.md  HACKATHON_SUBMISSION_MASTER.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  run_app.sh  sanitize-settings.sh
.github/: README.md
.github/scripts/: sanitize.py
.github/workflows/: README.md  auto-sanitize.yml  codeql.yml  detect-secrets.yml  pqc-audit.yml  reusable-sanitize.yml  reusable-secret-scan.yml  secret-scan.yml  zap-scan.yml
grant-finder-mcp/: .gitignore  QUICKSTART.md  README.md  README_HF.md  app.py  pyproject.toml  requirements.txt  setup.sh
grant-finder-mcp/src/: __init__.py  search_operators.py  server.py
hackathon-info/: README.md  sample3.md  sample5.md
mai-advisor-mcp/: .env.example  .gitignore  COMPLETION_DORK_VALIDATION.md  COMPLETION_SUMMARY.md  DORK_GENERATION_GUIDE.md  DORK_VALIDATION_README.md  EXTENSIVE_DORKS_QUICKSTART.md  FILE_WORKFLOW_GUIDE.md  FILE_WORKFLOW_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_DORK_IMPLEMENTATION.md  LOCATION_PARAMETER_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART_FILE_WORKFLOW.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_DEPLOY.md  README_HF_SPACE.md  README_LOCAL.md  SEARCH_ENGINE_SCHEMA_GUIDE.md  app.py  app_enhanced.py  app_simplified.py  app_workflow.py  compare_to_target.py  demo_extensive_dorks.py  demo_llm_dork_validation.py  integration_example.py  requirements.txt  run_workflow_demo.py  start.sh  test_extensive_dorks.py  test_mcp_server.py  test_workflow.py
(+100 files in other folders)
